# keyring-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Contributors.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  doctest.yaml  maturin-ci.yml  publish.yaml
examples/: set-or-clear-three.rs
examples/cli/: main.rs
examples/leak-test/: main.rs  run-linux-test.bash  run-macos-test.bash  run-windows-test.bash
examples/unit-test/: main.rs  runner.rs
examples/v1/: main.rs
python/: Cargo.toml  README.md  pyproject.toml
python-module/: Cargo.toml  pyproject.toml
python-module/src/: lib.rs
python/src/: lib.rs
src/: cli.rs  credential.rs  error.rs  lib.rs  macos.rs  main.rs  python.rs  secret_service.rs  stores.rs  v1.rs  windows.rs
src/credential_ext/: credential_cast.rs  mod.rs
tauri/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
tauri/assets/: keyring-demo-1024x500.psd  keys-1600x1600-demo-circle.psd  keys-1600x1600-demo.psd  keys-1600x1600.psd
tauri/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: history.rs  lib.rs  main.rs
tauri/src/lib/: commands.ts  sampleData.ts
tauri/src/lib/components/: HistoryPanel.svelte  HomeScreen.svelte  InfoPanel.svelte  NewEntryButton.svelte  SampleDataButton.svelte  SearchButton.svelte  SelectStoreButton.svelte  TopBar.svelte
tauri/src/routes/: +page.svelte  layout.css
