[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Sample code and CLI for the Rust Keyring"
readme = "README.md"
repository = "https://github.com/open-source-cooperative/keyring-rs"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["password", "credential", "keychain", "keyring", "cross-platform"]
license = "MIT OR Apache-2.0"
name = "keyring"
version = "4.0.0"
edition = "2024"
# uses let chains
rust-version = "1.88.0"
exclude = [".github"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
keyring-core = { version = "1.0.0", features = ["sample"] }
rpassword = "7.4.0"
rprompt = "2.2.0"

[dev-dependencies]
fastrand = "2.4.1"
zeroize = "1.8.2"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
db-keystore = { version = "0.4.2-pre.2" }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain", "protected"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["protected"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "1.0.0" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust", "vendored"] }
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0.0"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-gnu",
    "x86_64-linux-android",
    "x86_64-unknown-freebsd",
    "aarch64-apple-darwin",
    "aarch64-apple-ios"
]
