[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Sample code and CLI for the Rust Keyring"
readme = "README.md"
repository = "https://github.com/open-source-cooperative/keyring-rs"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["password", "credential", "keychain", "keyring", "cross-platform"]
license = "MIT OR Apache-2.0"
name = "keyring"
version = "4.0.1"
edition = "2024"
# uses let chains
rust-version = "1.88.0"
exclude = [".github"]

[dependencies]
keyring-core = { version = "1.0.0" }

[dev-dependencies]
fastrand = "2.4.1"
zeroize = "1.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = [
  "keychain",
  "protected",
] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.1.0" }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = { version = "1.0.0" }

# Linux keyctl store.
# [target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "1.0.0", optional = true, target="cfg(target_os = \"linux\")"}

# unix DBUS secret service via ZBUS.
# It's available on macOS via MacPorts (at least)
dbus-secret-service-keyring-store = { version = "1.0.0", optional = true, features = [
  "crypto-rust",
  "vendored",
], target = "cfg(all(unix, feature=\"unix-dbus\")" }

# unix DBUS secret service via ZBUS.
# it's available even on Windows (for more see zbus crate info).
zbus-secret-service-keyring-store = { version = "1.0.0", optional = true, features = [
  "crypto-rust",
], target = "cfg(feature=\"zbus\")" }

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-gnu",
  "x86_64-linux-android",
  "x86_64-unknown-freebsd",
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
]

[features]
linux-keyctls = []
unix-dbus = ["dbus-secret-service-keyring-store"]
zbus = ["zbus-secret-service-keyring-store"]
