[package]
name = "rust_native_keyring"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_native_keyring"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
keyring-core = { version = "0.7", features = ["sample"] }
keyring = { version = "4.0.0-alpha.2", path = ".." }
