[package]
name = "keyring_lib"
version = "0.1.0"
description = "Rust back-end for keyring Tauri app"
authors = ["Daniel Brotsky <dev@brotsky.com>"]
edition = "2021"

[lib]
name = "keyring_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hex = "0.4.3"
indexmap = "2.12.1"
keyring = "4.0.0-alpha.6"
keyring-core = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-os = "2.3.2"

[patch.crates-io]
keyring = { version = "4.0.0-alpha.6", git = "https://github.com/open-source-cooperative/keyring-rs", branch = "next" }
android-native-keyring-store = { git = "https://github.com/open-source-cooperative/android-native-keyring-store.git", branch = "next" }
apple-native-keyring-store = { git = "https://github.com/open-source-cooperative/apple-native-keyring-store.git", branch = "next" }
dbus-secret-service-keyring-store = { git = "https://github.com/open-source-cooperative/dbus-secret-service-keyring-store.git", branch = "next" }
linux-keyutils-keyring-store = { git = "https://github.com/open-source-cooperative/linux-keyutils-keyring-store.git", branch = "next" }
windows-native-keyring-store = { git = "https://github.com/open-source-cooperative/windows-native-keyring-store.git", branch = "next" }
zbus-secret-service-keyring-store = { git = "https://github.com/open-source-cooperative/zbus-secret-service-keyring-store.git", branch = "next" }
